--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,28 +12,27 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-    
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v2
-    
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    
-    - name: Build APK
-      run: ./gradlew assembleDebug
-    
-    - name: Upload APK
-      uses: actions/upload-artifact@v3
-      with:
-        name: app-debug-apk
-        path: app/build/outputs/apk/debug/app-debug.apk
-        retention-days: 30
-
+      - name: Checkout code
+        uses: actions/checkout@v4  # ✅ 升级到 v4
+      
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4  # ✅ 升级到 v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2  # ✅ 当前最新，无需改
+      
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+      
+      - name: Build APK
+        run: ./gradlew assembleDebug --no-daemon --stacktrace  # ✅ 加参数便于调试
+      
+      - name: Upload APK
+        uses: actions/upload-artifact@v4  # ✅ 关键修复：v3 → v4
+        with:
+          name: app-debug-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
+          retention-days: 30
