--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,25 +13,27 @@ jobs:
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4  # ✅ 升级到 v4
+        uses: actions/checkout@v4
       
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4  # ✅ 升级到 v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          java-version: '11'
-          distribution: 'temurin'
-      
+          java-version: '17'
+          distribution: 'temurin'  # 推荐使用 Temurin（OpenJDK）
+
       - name: Setup Android SDK
-        uses: android-actions/setup-android@v2  # ✅ 当前最新，无需改
-      
+        uses: android-actions/setup-android@v2
+        with:
+          sdk-version: '34.0.0'  # 可选，指定 SDK 版本，避免冲突
+
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
-      
+
       - name: Build APK
-        run: ./gradlew assembleDebug --no-daemon --stacktrace  # ✅ 加参数便于调试
-      
+        run: ./gradlew assembleDebug --no-daemon --stacktrace
+
       - name: Upload APK
-        uses: actions/upload-artifact@v4  # ✅ 关键修复：v3 → v4
+        uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
           path: app/build/outputs/apk/debug/app-debug.apk
