--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,20 @@ jobs:
         with:
           sdk-version: '34.0.0'  # 可选，指定 SDK 版本，避免冲突
 
+      - name: Ensure Gradle Wrapper exists
+        run: |
+          if [ ! -f gradle/wrapper/gradle-wrapper.jar ]; then
+            echo "Gradle wrapper jar not found, generating wrapper..."
+            # 如果系统有gradle命令，使用它生成wrapper
+            if command -v gradle &> /dev/null; then
+              gradle wrapper --gradle-version 8.2
+            else
+              # 否则手动下载wrapper jar
+              mkdir -p gradle/wrapper
+              curl -L -o gradle/wrapper/gradle-wrapper.jar https://raw.githubusercontent.com/gradle/gradle/v8.2.0/gradle/wrapper/gradle-wrapper.jar
+            fi
+          fi
+
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
